--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,34 @@
         <a href="./index.html" class="header__logo">Wildberries</a>
         <input class="header__input" type="text" placeholder="Я ищу...">
         <!--сделать поиск-->
-        <button class="header__basket">Корзина</button>
+        <button type="button" class="header__basket btn btn-primary" data-bs-toggle="modal"
+            data-bs-target="#exampleModal">Корзина</button>
+        <!-- Модальное окно -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Корзина</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container-basket">
+                            <span>Название товара</span>
+                            <span id="price-basket">стоимость товара</span>
+                        </div>
+                        <div class="container-summa">
+                            <span>Итого:</span>
+                            <span>сумма</span>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                        <button type="button" class="btn btn-primary">Оформить заказ</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <div class="wrapper">
         <div id="carouselExampleIndicators" class="slider carousel slide" data-bs-ride="true">
@@ -27,19 +54,34 @@
                     aria-label="Slide 3"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
                     aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../img/ad-1.jpg" class="d-block w-100" alt="...">
+                    <a href="#">
+                        <img src="../img/ad-1.jpg" class="d-block w-100" alt="...">
+                    </a>
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/ad-2.jpg" class="d-block w-100" alt="...">
+                    <a href="#">
+                        <img src="../img/ad-2.jpg" class="d-block w-100" alt="...">
+                    </a>
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/ad-3.jpg" class="d-block w-100" alt="...">
+                    <a href="#">
+                        <img src="../img/ad-3.jpg" class="d-block w-100" alt="...">
+                    </a>
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/ad-4.jpg" class="d-block w-100" alt="...">
+                    <a href="#">
+                        <img src="../img/ad-4.jpg" class="d-block w-100" alt="...">
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a href="#">
+                        <img src="../img/ad-5.jpg" class="d-block w-100" alt="...">
+                    </a>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -61,15 +103,15 @@
                         <button class="bestsellers__card-view">Быстрый просмотр</button>
                         <div class="bestsellers__card-wrapper">
                             <span class="bestsellers__sale">10%</span>
-                            <button class="bestsellers__buy">купить</button>
+                            <button class="bestsellers__buy" id="button-buy">купить</button>
                         </div>
                     </div>
                     <div class="bestsellers__card-info">
                         <div class="bestsellers__card-price">
-                            <span class="bestsellers__new-price">900р</span>
+                            <span class="bestsellers__new-price" id="price">900р</span>
                             <span class="bestsellers__old-price">1000р</span>
                         </div>
-                        <span class="bestsellers__card-name">штаны</span>
+                        <span class="bestsellers__card-name">Штаны</span>
                     </div>
                 </div>
             </div>
