--- a/src/index.html
+++ b/src/index.html
@@ -99,25 +99,26 @@
             <span class="bestsellers__title">Хиты продаж</span>
             <div class="bestsellers__cards-container">
                 <div class="bestsellers__card">
-                    <div class="bestsellers__card-container">
+                    <img id="img">
+                    <div class="bestsellers__card-container" id="card">
                         <button class="bestsellers__card-view">Быстрый просмотр</button>
                         <div class="bestsellers__card-wrapper">
-                            <span class="bestsellers__sale">10%</span>
+                            <span class="bestsellers__sale" id="sale"></span>
                             <button class="bestsellers__buy" id="button-buy">купить</button>
                         </div>
                     </div>
                     <div class="bestsellers__card-info">
                         <div class="bestsellers__card-price">
-                            <span class="bestsellers__new-price" id="price">900р</span>
-                            <span class="bestsellers__old-price">1000р</span>
+                            <span class="bestsellers__new-price" >цена</span>
+                            <span class="bestsellers__old-price" id="price">1000р</span>
                         </div>
-                        <span class="bestsellers__card-name">Штаны</span>
+                        <span class="bestsellers__card-name" id="name"></span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script type="module" src="./index.js"></script>
+    <script src="./index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
