--- a/src/index.html
+++ b/src/index.html
@@ -97,8 +97,8 @@
         </div>
         <div class="bestsellers">
             <span class="bestsellers__title">Хиты продаж</span>
-            <div class="bestsellers__cards-container">
-                <div class="bestsellers__card">
+            <div class="bestsellers__cards-container" id="cards">
+                <!-- <div class="bestsellers__card">
                     <img id="img">
                     <div class="bestsellers__card-container" id="card">
                         <button class="bestsellers__card-view">Быстрый просмотр</button>
@@ -109,12 +109,12 @@
                     </div>
                     <div class="bestsellers__card-info">
                         <div class="bestsellers__card-price">
-                            <span class="bestsellers__new-price" >цена</span>
+                            <span class="bestsellers__new-price">цена</span>
                             <span class="bestsellers__old-price" id="price">1000р</span>
                         </div>
                         <span class="bestsellers__card-name" id="name"></span>
                     </div>
-                </div>
+                </div>  -->
             </div>
         </div>
     </div>
