--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <!--сделать поиск-->
         <button id="basket" type="button" class="header__basket btn btn-primary" data-bs-toggle="modal"
             data-bs-target="#exampleModal">Корзина</button>
-        <!-- Модальное окно -->
+        <!-- Модальное окно -->s
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -28,7 +28,7 @@
                         <div class="container-baskets"></div>
                         <div class="container-summa">
                             <span>Итого:</span>
-                            <span>сумма</span>
+                            <span id="sum">0</span>
                         </div>
 
                     </div>
