--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <!--сделать поиск-->
         <button id="basket" type="button" class="header__basket btn btn-primary" data-bs-toggle="modal"
             data-bs-target="#exampleModal">Корзина</button>
-        <!-- Модальное окно -->s
+        <!-- Модальное окно -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
