--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                        <button type="button" class="btn btn-secondary">Отмена</button>
                         <button type="button" class="btn btn-primary">Оформить заказ</button>
                     </div>
                 </div>
